Set up swagger file -2
