# swagger.yml
@@ -9,8 +9,8 @@ servers:
 paths:
   /players:
     get:
-      summary: Get all players.
-      description: Returns a list of players.
+      summary: Gets all players.
+      description: Returns a list of all the players including some of user details.
       responses:
         '200':
           description: Successful getting all players
@@ -31,13 +31,13 @@ paths:
           description: Unsuccesful response!
   /players/{id}:
     delete:
-      summary: Delete a player
-      description: The admin can delete a player
+      summary: Deletes a player
+      description: The admin can delete a player from the list.
       parameters:
         - name: id
           in: path
           required: true
-          description: The ID of the player to delete.
+          description: The ID of the player.
           schema:
             type: string
       responses:
@@ -58,10 +58,17 @@ paths:
           description: Unsuccesful response
   /players/signup:
     post:
-      summary: Sign up a player.
-      description: Returns a list of players.
+      summary: Creates a new player.
+      description: Returns the signed up player details and a success message.
+      requestBody:
+        description: Details of the user, all are reuired
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
-        '200':
+        '201':
           description: Successful signing up player
           content:
             application/json:
@@ -70,21 +77,78 @@ paths:
                 properties:
                   status:
                     type: string
-                  results:
-                    type: integer
+                    example: success
                   data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Player'
+                    $ref: '#/components/schemas/Player'
+                  message:
+                    type: string
+                    example: A new account is made for Jack
+        '400':
+          description: User with that email already exists.
         '404':
-          description: No players found!
-  /teams:
+          description: Missing input details.
+  /fixtures/{id}:
     get:
-      summary: Returns a list of teams.
-      description: Players select one of these teams on signup.
+      summary: Gets a fixture.
+      description: >
+        Returns the fixture. 
+        Including the predictions and scores of the players if predictions were made.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the fixture.
+          schema:
+            type: integer
+            minimum: 707179
+            maximum: 707484
+      responses:
+        '200':
+          description: A fixture  with the scores of the players.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    example: success
+                  data:
+                    properties:
+                      fixture:
+                        $ref: '#/components/schemas/Fixture'
+                      scores:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/PredictionsWithScores'
+        '400':
+          description: Bad request, return error when the id is not valid.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    example: fail
+                  message:
+                    example: This is not a valid fixture id.
+
+        '404':
+          description: The fixture with this id was not found.
+        default:
+          description: Unexpected error
+  /scores/players/{id}:
+    get:
+      summary: Gets the scores of a player.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the player.
+          schema:
+            type: string
       responses:
         '200': # status code
-          description: Successful getting all teams
+          description: Successful getting all the player and her/his scores
           content:
             application/json:
               schema:
@@ -109,49 +173,39 @@ paths:
                     type: string
                   message:
                     type: string
-  /fixtures/{id}:
+  /teams:
     get:
-      summary: Returns a fixture by ID.
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: The ID of the fixture to return.
-          schema:
-            type: integer
-            minimum: 707179
+      summary: Gets all teams.
+      description: Players select one of these teams on signup.
       responses:
-        '200':
-          description: A fixture  with the scores of the players.
+        '200': # status code
+          description: Successful getting all teams
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   status:
+                    type: string
                     example: success
+                  results:
+                    type: integer
+                    example: 1
                   data:
-                    properties:
-                      fixture:
-                        $ref: '#/components/schemas/Fixture'
-                      scores:
-                        $ref: '#/components/schemas/PredictionsWithScores'
-        '400':
-          description: Bad request, return error when the id is not valid.
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Team'
+        '500':
+          description: No teams found, please try again later
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   status:
-                    example: fail
+                    type: string
                   message:
-                    example: This is not a valid fixture id.
-
-        '404':
-          description: The fixture with this id was not found.
-        default:
-          description: Unexpected error
+                    type: string
 components:
   schemas:
     Fixture:
@@ -186,41 +240,81 @@ components:
       properties:
         id:
           type: integer
-        name:
-          type: string
+          example: 1118
         logo:
           type: string
+          example: https://media.api-sports.io/football/teams/1118.png
+        name:
+          type: string
+          example: Netherlands
     PredictionsWithScores:
       type: object
       properties:
         name:
           type: string
-        id:
+          example: Jack
+        userId:
           type: string
+          example: 2222bbbb-ffff-4444-aaaa-888887777777
         pGoalsHomeTeam:
           type: integer
+          example: 3
         pGoalsAwayTeam:
           type: integer
+          example: 2
         score:
           type: integer
+          example: 5
     Player:
       type: object
       properties:
         id:
           type: string
+          example: 2222bbbb-ffff-4444-aaaa-888887777777
         userName:
           type: string
+          example: Jack
         firstName:
           type: string
+          example: Jack
         lastName:
           type: string
+          example: Sparrow
         email:
           type: string
+          example: jack@sparrow.com
         phoneNumber:
           type: string
+          example: 0612312312
         admin:
           type: boolean
+          example: False
         totaalToto:
           type: boolean
+          example: True
         team:
           $ref: '#/components/schemas/Team'
+    User:
+      type: object
+      properties:
+        userName:
+          type: string
+          example: Jack
+        firstName:
+          type: string
+          example: Jack
+        lastName:
+          type: string
+          example: Sparrow
+        email:
+          type: string
+          example: jack@sparrow.com
+        phoneNumber:
+          type: string
+          example: 0612312312
+        totaalToto:
+          type: boolean
+          example: true
+        teamId:
+          type: integer
+          example: 123
